tests/errors/lex_test21.kt
// This file contains an illegal token
file
